--- a/index.html
+++ b/index.html
@@ -628,12 +628,17 @@
         
         /* Bottom Nav */
         .bottom-nav {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
             display: flex;
             justify-content: space-around;
             padding: 8px 0 calc(8px + var(--safe-bottom));
             background: rgba(0, 0, 0, 0.9);
             backdrop-filter: blur(20px);
             border-top: 1px solid var(--border);
+            z-index: 1000;
         }
         
         .nav-item {
