UI: Color-coded badges for Activities, Scheduled, Completed in model cards

--- a/index.html
+++ b/index.html
@@ -1075,18 +1075,18 @@
                     <div class="bot-card-header">
                         <span class="bot-name">${model.name}</span>
                     </div>
-                    <div style="margin-top: 12px; display: flex; flex-direction: column; gap: 6px;">
+                    <div style="margin-top: 16px; display: flex; flex-direction: column; gap: 10px;">
                         <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <span style="font-size: 12px; color: var(--text-tertiary);">Activities</span>
-                            <span style="font-size: 16px; font-weight: 600;">${model.activities}</span>
+                            <span style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px; padding: 4px 10px; border-radius: 20px; background: rgba(255, 159, 10, 0.2); color: var(--orange);">Activities</span>
+                            <span style="font-size: 18px; font-weight: 700; color: var(--orange);">${model.activities}</span>
                         </div>
                         <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <span style="font-size: 12px; color: var(--text-tertiary);">Scheduled</span>
-                            <span style="font-size: 14px; font-weight: 500;">${model.scheduled}</span>
+                            <span style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px; padding: 4px 10px; border-radius: 20px; background: rgba(10, 132, 255, 0.2); color: var(--blue);">Scheduled</span>
+                            <span style="font-size: 16px; font-weight: 600; color: var(--blue);">${model.scheduled}</span>
                         </div>
                         <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <span style="font-size: 12px; color: var(--text-tertiary);">Completed</span>
-                            <span style="font-size: 14px; font-weight: 500; color: var(--green);">${model.completed}</span>
+                            <span style="font-size: 11px; font-weight: 600; text-transform: uppercase; letter-spacing: 0.3px; padding: 4px 10px; border-radius: 20px; background: rgba(48, 209, 88, 0.2); color: var(--green);">Completed</span>
+                            <span style="font-size: 16px; font-weight: 600; color: var(--green);">${model.completed}</span>
                         </div>
                     </div>
                 </div>
