--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@
                             <span class="kanban-column-count">2</span>
                         </div>
                         <div class="kanban-cards" id="kanban-todo-preview">
-                            <div class="kanban-card" style="height: 100px; min-height: 100px; max-height: 100px;">
+                            <div class="kanban-card" >
                                 <div class="kanban-card-title">Apple Notes 備份驗證機制</div>
                                 <div class="kanban-card-desc">創建腳本驗證 Apple Notes 備份完整性</div>
                                 <div class="kanban-card-footer">
@@ -1238,7 +1238,7 @@
                                     <span class="kanban-card-time">高優先級</span>
                                 </div>
                             </div>
-                            <div class="kanban-card" style="height: 100px; min-height: 100px; max-height: 100px;">
+                            <div class="kanban-card" >
                                 <div class="kanban-card-title">Qwen3 Excel Dynamic Arrays 訓練</div>
                                 <div class="kanban-card-footer">
                                     <span class="kanban-card-bot qwen3">Qwen3</span>
@@ -1254,7 +1254,7 @@
                             <span class="kanban-column-count">1</span>
                         </div>
                         <div class="kanban-cards" id="kanban-progress-preview">
-                            <div class="kanban-card" style="height: 100px; min-height: 100px; max-height: 100px;">
+                            <div class="kanban-card" >
                                 <div class="kanban-card-title">MEMORY.md 關鍵記憶標記</div>
                                 <div class="kanban-card-desc">建立機制防止重要資訊被誤刪</div>
                                 <div class="kanban-card-footer">
@@ -1262,7 +1262,7 @@
                                     <span class="kanban-card-time">進行中</span>
                                 </div>
                             </div>
-                            <div class="kanban-card" style="height: 100px; min-height: 100px; max-height: 100px;">
+                            <div class="kanban-card" >
                                 <div class="kanban-card-title">Dashboard UI 優化</div>
                                 <div class="kanban-card-desc">改善用戶體驗同交互</div>
                                 <div class="kanban-card-footer">
@@ -1280,7 +1280,7 @@
                             <span class="kanban-column-count">0</span>
                         </div>
                         <div class="kanban-cards" id="kanban-review-preview">
-                            <div class="kanban-card" style="height: 100px; min-height: 100px; max-height: 100px;">
+                            <div class="kanban-card" >
                                 <div class="kanban-card-title">Stock List 整合腳本</div>
                                 <div class="kanban-card-desc">測試 Excel 自動合併功能</div>
                                 <div class="kanban-card-footer">
@@ -1289,7 +1289,7 @@
                                 </div>
                             </div>
                             
-                            <div class="kanban-card" style="height: 100px; min-height: 100px; max-height: 100px;">
+                            <div class="kanban-card" >
                                 <div class="kanban-card-title">Token 監控警報</div>
                                 <div class="kanban-card-desc">優化三層警告系統</div>
                                 <div class="kanban-card-footer">
@@ -1306,14 +1306,14 @@
                             <span class="kanban-column-count">2</span>
                         </div>
                         <div class="kanban-cards" id="kanban-done-preview">
-                            <div class="kanban-card" style="height: 100px; min-height: 100px; max-height: 100px;">
+                            <div class="kanban-card" >
                                 <div class="kanban-card-title">Excel XLOOKUP 訓練完成</div>
                                 <div class="kanban-card-footer">
                                     <span class="kanban-card-bot qwen3">Qwen3</span>
                                     <span class="kanban-card-time">Feb 6</span>
                                 </div>
                             </div>
-                            <div class="kanban-card" style="height: 100px; min-height: 100px; max-height: 100px;">
+                            <div class="kanban-card" >
                                 <div class="kanban-card-title">Excel INDEX+MATCH 訓練完成</div>
                                 <div class="kanban-card-footer">
                                     <span class="kanban-card-bot qwen3">Qwen3</span>
