--- a/index.html
+++ b/index.html
@@ -1464,10 +1464,10 @@
         
         // Health data
         let healthData = {
-            openclaw: { status: 'up', responseTime: 120, icon: '', name: 'OpenClaw', color: 'rgba(0, 122, 255, 0.35)' },
-            whatsapp: { status: 'up', responseTime: 45, icon: '', name: 'WhatsApp', color: 'rgba(52, 199, 89, 0.35)' },
-            kimi: { status: 'up', responseTime: 2500, icon: '', name: 'Kimi', color: 'rgba(175, 82, 222, 0.35)' },
-            qwen3: { status: 'up', responseTime: 1800, icon: '', name: 'Qwen3', color: 'rgba(255, 149, 0, 0.35)' },
+            openclaw: { status: 'up', responseTime: 120, icon: '🤖', name: 'OpenClaw', color: 'rgba(0, 122, 255, 0.35)' },
+            whatsapp: { status: 'up', responseTime: 45, icon: '💬', name: 'WhatsApp', color: 'rgba(52, 199, 89, 0.35)' },
+            kimi: { status: 'up', responseTime: 2500, icon: '☁️', name: 'Kimi', color: 'rgba(175, 82, 222, 0.35)' },
+            qwen3: { status: 'up', responseTime: 1800, icon: '🦾', name: 'Qwen3', color: 'rgba(255, 149, 0, 0.35)' },
             lastCheck: new Date().toLocaleTimeString('zh-HK')
         };
 
